--- a/MessagingProducer/pom.xml
+++ b/MessagingProducer/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>CSND.opdrachten</groupId>
-	<artifactId>Messaging</artifactId>
+	<artifactId>MessagingProducer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Messaging</name>
 	<description>Messaging</description>
@@ -39,6 +39,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-aws</artifactId>
 			<version>2.2.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-aws-messaging</artifactId>
+			<version>2.2.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>amazon-sqs-java-extended-client-lib</artifactId>
+			<version>2.1.1</version>
 		</dependency>
 
 		<dependency>
