-aws credentials added

--- a/MessagingProducer/src/main/resources/application.properties
+++ b/MessagingProducer/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=Messaging
 
-server
-cloud.aws.region.static= us-east-1
-cloud.aws.stack.auto= false
+server.port=8080
+cloud.aws.region.static=us-east-1
+cloud.aws.stack.auto=false
+
+cloud.aws.credentials.access-key=ASIAS7QJ4LLQTQOFAURA
+cloud.aws.credentials.secret-key=U0dVIb2nJtd0fGWqI2c9EdwBNm+yz+d9FgMgSli2
+cloud.aws.end-point.url=https://sqs.us-east-1.amazonaws.com/205105421025/FotoTestQueue
