fixed enviroment variables

--- a/MessagingConsumer/src/main/resources/application.properties
+++ b/MessagingConsumer/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=MessagingConsumer
 server.port=8081
 
 cloud.aws.region.static=us-east-1
-#cloud.aws.stack.auto=false
+cloud.aws.stack.auto=false
